# opus_agents

./: .gitignore  CONTRIBUTING_GUIDE.md  README.md  README_all.md  REFACTORING_SUMMARY.md  TODO.md  USER_GUIDE.md  main.py  opus-config.sample.yaml  opus-config.sample.yml  pyproject.toml  unused-tools.yaml
opus_agent_base/: README.md  __init__.py  pyproject.toml
opus_agent_base/agent/: agent_manager.py
opus_agent_base/cli/: __init__.py  agent_runner.py  cli.py  main.py
opus_agent_base/common/: __init__.py  config_command_manager.py
opus_agent_base/config/: config_command_manager.py
opus_agent_base/helpers/: __init__.py
opus_agent_base/managers/: __init__.py  custom_tools_manager.py  higher_order_tools_manager.py  instructions_manager.py
opus_agent_base/model/: model_manager.py
opus_agent_base/src/agent/: agent_instance.py  agent_runner.py
opus_agent_base/src/common/: datetime_helper.py
opus_agent_base/src/opus_agent_base/: __init__.py  agent_manager.py  agent_runner.py  cli.py  instructions_manager.py  logging_config.py  main.py
opus_agent_base/src/opus_agent_base/agent/: __init__.py  agent_builder.py  agent_dependencies.py  agent_instance.py  agent_manager.py  agent_runner.py
opus_agent_base/src/opus_agent_base/cli/: __init__.py  cli.py
opus_agent_base/src/opus_agent_base/common/: __init__.py  config_manager.py  logging_config.py
opus_agent_base/src/opus_agent_base/config/: __init__.py  config_command_manager.py  config_manager.py  nested_config_manager.py
opus_agent_base/src/opus_agent_base/gateway/: openai_compatible_gateway.py
opus_agent_base/src/opus_agent_base/model/: __init__.py  model_manager.py
opus_agent_base/src/opus_agent_base/prompt/: __init__.py  instructions_manager.py
opus_agent_base/src/opus_agent_base/tools/: __init__.py  custom_tools_manager.py  fastmcp_client_helper.py  fastmcp_server_config.py  higher_order_tools_manager.py  mcp_manager.py  mcp_server_config.py  mcp_server_registry.py  meta_tool.py  meta_tools_manager.py  openapi_meta_tool.py
opus_agent_base/src/opus_agent_base/ui/: logo.py
opus_agent_base/src/prompt/: instructions_manager.py
opus_agent_base/src/tools/: custom_tool.py
opus_agent_base/tools/: fastmcp_client_helper.py  fastmcp_server_config.py  higher_order_tool.py  higher_order_tools_manager.py  mcp_manager.py  mcp_server_registry.py
opus_deepwork_agent/: main.py  opus_config.deepwork.sample.yml  pyproject.toml
opus_deepwork_agent/src/opus_deepwork_agent/: __init__.py  deepwork_agent_builder.py  deepwork_agent_builder_alternate.py  deepwork_agent_runner.py
opus_deepwork_agent/src/opus_deepwork_agent/custom_tools/calendar/: clockwise_tools.py
opus_deepwork_agent/src/opus_deepwork_agent/custom_tools/todo/: todoist_client.py  todoist_tools.py
opus_sde_agent/: pyproject.toml  sde_agent_builder.py  sde_agent_runner.py  sde_mcp_server_registry.py
opus_sde_agent/higher_order_tools/project_management/: github_issues_tools.py
opus_sde_agent/src/opus_sde_agent/: __init__.py  sde_agent_builder.py  sde_agent_runner.py
opus_sde_agent/src/opus_sde_agent/background_jobs/: __init__.py
opus_sde_agent/src/opus_sde_agent/custom_tools/: __init__.py
opus_sde_agent/src/opus_sde_agent/helper/: __init__.py
opus_sde_agent/src/opus_sde_agent/higher_order_tools/: __init__.py
opus_sde_agent/src/opus_sde_agent/higher_order_tools/project_management/: __init__.py  jira_issues_tools.py
opus_todo_agent/: __init__.py  agent_runner.py  cli.py  custom_tools_manager.py  higher_order_tools_manager.py  instructions_manager.py  logging_config.py  main.py  mcp_manager.py  pyproject.toml  todo_agent_builder.py  todo_agent_runner.py  todo_mcp_server_registry.py
opus_todo_agent/background_jobs/notes/: obsidian_indexer.py
opus_todo_agent/common/: config_command_manager.py  config_manager.py  opus-config-productivity.sample.yaml  opus-config.sample.yaml
opus_todo_agent/custom_tools/meeting_transcript/: loom_meeting_assistant.py  loom_tools.py  zoom_meeting_assistant.py  zoom_tools.py
opus_todo_agent/custom_tools/notes/: obsidian_rag.py  obsidian_tools.py
opus_todo_agent/custom_tools/todo/: todoist_tools.py
opus_todo_agent/helper/calendar/: clockwise_calendar_helper.py  google_calendar_helper.py
opus_todo_agent/helper/chat/: slack_helper.py
opus_todo_agent/higher_order_tools/calendar/: clockwise_calendar_tools.py  clockwise_higher_order_tool.py  google_calendar_tools.py
opus_todo_agent/higher_order_tools/chat/: slack_assistant.py  slack_tools.py
opus_todo_agent/models/calendar/: clockwise_calendar_models.py  google_calendar_models.py
opus_todo_agent/spikes/: fastmcp_client_with_oauth.py  google_workspace_tools.py
opus_todo_agent/src/: todo_agent_builder.py  todo_agent_runner.py
opus_todo_agent/src/custom_tools/meeting_transcript/: loom_meeting_assistant.py  zoom_meeting_assistant.py
opus_todo_agent/src/custom_tools/notes/: obsidian_tools.py
opus_todo_agent/src/higher_order_tools/calendar/: google_calendar_higher_order_tool.py
opus_todo_agent/src/opus_todo_agent/: __init__.py  todo_agent_builder.py  todo_agent_runner.py  todo_mcp_server_registry.py
opus_todo_agent/src/opus_todo_agent/background_jobs/: __init__.py
opus_todo_agent/src/opus_todo_agent/background_jobs/notes/: __init__.py  obsidian_indexer.py
opus_todo_agent/src/opus_todo_agent/custom_tools/: __init__.py
opus_todo_agent/src/opus_todo_agent/custom_tools/chat/: __init__.py
opus_todo_agent/src/opus_todo_agent/custom_tools/meeting_transcript/: __init__.py  (+1 more)
opus_todo_agent/src/opus_todo_agent/helper/: __init__.py
opus_todo_agent/src/opus_todo_agent/higher_order_tools/: __init__.py
opus_todo_agent/src/opus_todo_agent/models/: __init__.py
spikes/langgraph-starter/: README.md  langgraph_agent_with_function_tool.ipynb  langgraph_agent_with_system_prompt.ipynb  langgraph_agent_with_weather_function_tool.py  langgraph_conversational_memory.ipynb  langgraph_mcp_starter.py  langgraph_structured_output.ipynb  main.py  pyproject.toml
spikes/pydantic-ai-multi-agent/: README.md  agents.py  main.py  portfolio.csv  pyproject.toml
(+140 files in other folders)
