[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opus-todo-agent"
version = "0.1.0"
description = "Collection of Opus TODO AI Agents with common Productivity workflows across a suite of TODO and Collaboration tools."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Sathish", email = "sathish316@gmail.com"},
]
license = {text = "MIT"}
keywords = ["ai", "coding", "agent", "development", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "boto3>=1.40.21",
    "pydantic-ai>=0.8.1",
    "pydantic-ai-slim[anthropic,openai,retries]>=0.8.1",
    "tenacity>=8.2.0", # For retry functionality
    "httpx>=0.24.0", # For HTTP client customization
    "singleton-decorator>=1.0.0",
    "fastmcp>=2.12.4",
    "typer>=0.19.2",
    "tiktoken>=0.12.0",
    "chromadb>=1.1.1",
    "rapidfuzz>=3.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
opus-todo-agent = "opus_todo_agent.main:main"

[project.urls]
Homepage = "https://github.com/sathish316/opus_todo_agent"
Documentation = "https://github.com/sathish316/opus_todo_agent#readme"
Repository = "https://github.com/sathish316/opus_todo_agent.git"
Issues = "https://github.com/sathish316/opus_todo_agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["opus_todo_agent"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
