[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opus-agents"
version = "0.1.0"
description = """Opus Agents - AI Agents framework for extending the functionality of MCP servers and tools with custom tool and higher order tools. 
Collection of Pre-defined Agents and Tools for working with Productivity and Collaboration software"""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Sathish", email = "sathish316@gmail.com"},
]
license = {text = "MIT"}
keywords = ["ai", "agent", "framework", "mcp", "openai", "anthropic", "productivity", "todo", "calendar", "slack", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Local workspace packages
    "opus-agent-base",
    "opus-sde-agent", 
    "opus-todo-agent",
    # Additional dependencies
    "mcp-server-docker>=0.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
opus-agents = "main:main"

[project.urls]
Homepage = "https://github.com/sathish316/opus_agents"
Documentation = "https://github.com/sathish316/opus_agents#readme"
Repository = "https://github.com/sathish316/opus_agents.git"
Issues = "https://github.com/sathish316/opus_agents/issues"

# Hatchling build configuration
[tool.hatch.build.targets.wheel]
packages = ["main.py"]
only-include = ["main.py"]

[tool.hatch.build.targets.sdist]
include = [
    "main.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# Black formatter configuration
[tool.black]
line-length = 88
target-version = ['py312']

# Ruff linter configuration
[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

# MyPy type checker configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["opus_agent_base/tests", "opus_todo_agent/tests", "opus_sde_agent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# UV workspace configuration
[tool.uv.workspace]
members = [
    "opus_agent_base",
    "opus_todo_agent",
    "opus_sde_agent",
]

[tool.uv.sources]
opus-agent-base = { workspace = true }
opus-sde-agent = { workspace = true }
opus-todo-agent = { workspace = true }
