[project]
name = "opus-agent-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sathish", email = "sathish316@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
opus-agent-base = "opus_agent_base:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
