[project]
name = "opus-deepwork-agent"
version = "0.1.0"
description = "DeepWork Agent for managing and scheduling focused work sessions"
requires-python = ">=3.12"
dependencies = [
    "opus-agent-base",
]

[project.scripts]
opus-deepwork-agent = "opus_deepwork_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opus_deepwork_agent"]
