[project]
name = "opus-sde-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sathish", email = "sathish316@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
opus-sde-agent = "opus_sde_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
