[project]
name = "opus-sde-agent"
version = "0.1.0"
description = "Software Development Engineer Agent for Opus AI"
readme = "README.md"
authors = [
    { name = "Sathish", email = "sathish316@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "opus-agent-base",
]

[project.scripts]
opus-sde-agent = "opus_sde_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opus_sde_agent"]
