[project]
name = "opus-todo-agent"
version = "0.1.0"
description = "Productivity and TODO Agent for Opus AI"
readme = "README.md"
authors = [
    { name = "Sathish", email = "sathish316@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "opus-agent-base",
    "todoist-api-python>=2.1.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "slack-sdk>=3.0.0",
]

[project.scripts]
opus-todo-agent = "opus_todo_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opus_todo_agent"]
